# gio-sharp

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen-2.18.sh  autogen-2.22.sh  autogen-generic.sh  autogen.sh  configure.ac  configure.ac.in  configure.in
generator/: .gitignore  BoxedGen.cs  CallbackGen.cs  EnumGen.cs  FieldBase.cs  GenBase.cs  InterfaceGen.cs  Makefile.am  ManagedCallString.cs  Method.cs  README  Signal.cs  VirtualMethod.cs
gio/: .gitignore  AppInfoAdapter.custom  AssemblyInfo.cs.in  File.custom  FileAdapter.custom  FileEnumerator.custom  FileFactory.cs  Gio.metadata  GioStream.cs  Makefile.am  SeekType.cs  StreamWrapper.cs  gio-api-2.22.raw  gio-api.raw  gio-sharp-2.0.pc.in  gio-sharp-unstable.pc.in  gio-sharp.dll.config.in  metadata
sample/: Makefile.am  TestAppInfo.cs  TestDirectory.cs  TestInfo.cs
sources/: .gitignore  Makefile.am  sources-2.18.xml  sources-2.22.xml  sources.xml
